EEC_InitBackup/src/objects/EEC_HistoryOfNonComplianceStaging__c.object
<CustomObject>
    <description>Staging object used to load historic Non Compliance Data into target objects Visits/Visit Items  or Investigation/Additional non-compliance</description>
    <fields>
        <fullName>Citation__c</fullName>
        <label>Citation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrectionPlan__c</fullName>
        <label>CorrectionPlan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DuplicateRule1__c</fullName>
        <description>ProgramId + InteractionId + InteractionTypeDesc</description>
        <formula>ProgramId__c + &apos;|&apos; + InteractionId__c + &apos;|&apos; + InteractionTypeDesc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DuplicateRule1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorText2__c</fullName>
        <description>Error text for VisitItem failure</description>
        <label>ErrorText2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorText__c</fullName>
        <label>ErrorText</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeID__c</fullName>
        <label>IntakeID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionDate__c</fullName>
        <label>Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InteractionId__c</fullName>
        <label>InteractionId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionTypeDesc__c</fullName>
        <label>InteractionTypeDesc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestigationType__c</fullName>
        <label>InvestigationType</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicensorOfInteraction__c</fullName>
        <label>LicensorOfInteraction</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <label>ProgramId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitItem_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisitItem Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>HistoryOfNonComplianceStaging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Citation__c</columns>
        <columns>DuplicateRule1__c</columns>
        <columns>Visit_Processed__c</columns>
        <columns>VisitItem_Processed__c</columns>
        <columns>ProgramId__c</columns>
        <columns>ErrorText__c</columns>
        <columns>ErrorText2__c</columns>
        <columns>Observations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Specific_Provider</fullName>
        <columns>NAME</columns>
        <columns>Citation__c</columns>
        <columns>DuplicateRule1__c</columns>
        <columns>Visit_Processed__c</columns>
        <columns>VisitItem_Processed__c</columns>
        <columns>ProgramId__c</columns>
        <columns>ErrorText__c</columns>
        <columns>ErrorText2__c</columns>
        <columns>Observations__c</columns>
        <columns>InteractionTypeDesc__c</columns>
        <columns>CorrectionPlan__c</columns>
        <columns>InteractionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramId__c</field>
            <operation>equals</operation>
            <value>90799</value>
        </filters>
        <label>Specific Provider</label>
    </listViews>
    <nameField>
        <displayFormat>NC-{000000}</displayFormat>
        <label>HistoryOfNonComplianceNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HistoryOfNonComplianceStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>